# shortest-path

./: Makefile  runTests.sh
Coursework 1/: CMakeLists.txt  Makefile
Coursework 1/include/: tests.h  valueTree.h  writeTree.h
Coursework 1/src/: buildTree.c  destroyTree.c  tests.c
Coursework 2/: Makefile  runTests.sh
Coursework 2/Submission/: Makefile
Coursework 2/Submission/include/: dijkstrasAlgorithm.h  priorityQueue.h
Coursework 2/Submission/resources/: SimpleMap.map
Coursework 2/Submission/src/: binaryHeap.c  buildNetwork.c  dijkstrasAlgorithm.c  main.c  networkUtils.c
Coursework 2/include/: binaryHeap.h  buildNetwork.h  constants.h  dijkstrasAlgorithm.h  djikstrasAlgorithm.h  networkStructure.h  networkUtils.h  outFile.h  priorityQueue.h  readFile.h  writeNetwork.h
Coursework 2/report/: report.docx  ~$report.docx
Coursework 2/resources/: DisconnectedMap.map  SimpleMap.map
Coursework 2/src/: binaryHeap.c  buildNetwork.c  dijkstrasAlgorithm.c  djikstrasAlgorithm.c  handleError.c  main.c  networkUtils.c  outFile.c  priorityQueue.c  readFile.c  test  writeNetwork.c
include/: buildTree.h  destroyTree.h  dijkstrasAlgorithm.h  growTree.h  handleError.h  networkStructure.h  networkUtils.h  tests.h  treeStructure.h  valueTree.h  writeTree.h
resources/: SimpleMap.map
src/: buildTree.c  buildTree.h  destroyTree.c  dijkstrasAlgorithm.c  growTree.c  handleError.c  main.c  priorityQueue.c  tests.c  treeStructure.h  valueTree.c  writeNetwork.c  writeTree.c
